--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
+    sdk: flutter  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -41,9 +41,19 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/avatar.png
+    - assets/images/business_bg.png
+    - assets/images/marketing_bg.png
+    - assets/images/photography_bg.png
+    - assets/images/ux_design_bg.png
+    - assets/icons/arrow_left.png
+    - assets/icons/menu.png
+    - assets/icons/more_vertical.png
+    - assets/icons/play.png
+    - assets/icons/shopping_bag.png
+    - assets/icons/star.png
+    - assets/icons/user.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -56,12 +66,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Avenir
+      fonts:
+        - asset: assets/fonts/AvenirLT-Roman.ttf          
+        - asset: assets/fonts/AvenirLT-Medium.ttf          
+        - asset: assets/fonts/AvenirLT-Heavy.ttf        
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
