--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  intl: ^0.16.1
   flutter_staggered_grid_view: "^0.3.0"  
 
 # For information on the generic Dart part of this file, see the
